--- a/Web1/Views/Jasmine/SpecRunner.cshtml
+++ b/Web1/Views/Jasmine/SpecRunner.cshtml
@@ -9,6 +9,7 @@
 
     <link rel="shortcut icon" type="image/png" href="~/content/jasmine/jasmine_favicon.png">
     <link rel="stylesheet" type="text/css" href="~/content/jasmine/jasmine.css">
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
     <script src="~/scripts/vendor/jasmine.js"></script>
     <script src="~/scripts/vendor/jasmine-html.js"></script>
 
@@ -19,6 +20,10 @@
     <!-- include source files here... -->
     <script src="~/scripts/app.js"></script>
     <script src="~/scripts/controllers.js"></script>
+    <script src="~/scripts/services.js"></script>
+    <script src="~/scripts/filters.js"></script>
+    <script src="~/scripts/directives.js"></script>
+
 
     <!-- include spec files here... -->
     <script src="~/scripts/controllersSpec.js"></script>
